--- a/src/stories/ReadMe.mdx
+++ b/src/stories/ReadMe.mdx
@@ -10,3 +10,5 @@ import { Meta } from "@storybook/blocks";
 
 propsなどはDocsに記載しています。`modelValue`propsおよび`update:modelValue`はコンポーネントの`v-model`で利用できます。
 
+## ライセンス表記
+Copyright Digital Agency, Government of Japan 2023. Licensed under CC by 4.0
