ReadMeのアップデート

--- a/src/stories/ReadMe.mdx
+++ b/src/stories/ReadMe.mdx
@@ -10,5 +10,8 @@ import { Meta } from "@storybook/blocks";
 
 propsなどはDocsに記載しています。`modelValue`propsおよび`update:modelValue`はコンポーネントの`v-model`で利用できます。
 
-## ライセンス表記
+## 必要動作環境
+Vue 3.4以上
+
+## ライセンスに関する表記
 Copyright Digital Agency, Government of Japan 2023. Licensed under CC by 4.0
