--- a/src/stories/ReadMe.mdx
+++ b/src/stories/ReadMe.mdx
@@ -6,7 +6,7 @@ import { Meta } from "@storybook/blocks";
 # デジタル庁デザインシステム Storybook Vue.js
 [デジタル庁が公開しているデザインシステム](https://www.digital.go.jp/policies/servicedesign/designsystem)をVue.jsで実装したものです。各コンポーネントをこのStorybookで紹介しています。一部技術的な制約で紹介されていないコンポーネントもあります（例：見出しコンポーネント）。
 
-ライトテーマ・ダークテーマにも対応していますが、Storybook上では環境のテーマを参照していますので、ブラウザあるいは閲覧環境のテーマを変更することで確認できます。
+ライトモード・ダークモードにも対応していますが、一部コンポーネントでダークモード時の配色がデザインシステムに準拠していない可能性があります。ストーリーブックツールバーからライト/ダークモードの切り替えができます
 
 propsなどはDocsに記載しています。`modelValue`propsおよび`update:modelValue`はコンポーネントの`v-model`で利用できます。
 
