--- a/src/stories/ReadMe.mdx
+++ b/src/stories/ReadMe.mdx
@@ -6,12 +6,12 @@ import { Meta } from "@storybook/blocks";
 # デジタル庁デザインシステム Storybook Vue.js
 [デジタル庁が公開しているデザインシステム](https://www.digital.go.jp/policies/servicedesign/designsystem)をVue.jsで実装したものです。各コンポーネントをこのStorybookで紹介しています。一部技術的な制約で紹介されていないコンポーネントもあります（例：見出しコンポーネント）。
 
-ライトモード・ダークモードにも対応していますが、一部コンポーネントでダークモード時の配色がデザインシステムに準拠していない可能性があります。ストーリーブックツールバーからライト/ダークモードの切り替えができます
+現在、ダークモードのカラースキームは対応していません。
 
 propsなどはDocsに記載しています。`modelValue`propsおよび`update:modelValue`はコンポーネントの`v-model`で利用できます。
 
 ## 必要動作環境
 Vue 3.4以上
 
-## ライセンスに関する表記
+## デザインのライセンスに関する表記
 Copyright Digital Agency, Government of Japan 2023. Licensed under CC by 4.0
